started work on setting up position of map nodes

--- a/scotland_yard.html
+++ b/scotland_yard.html
@@ -7,6 +7,8 @@
     {{> about}} <br />
     <div id="gamemap">
         <img src="map.jpg" alt="map board" />
+        <div class="blue_x" style="left: 80px; top: 40px;" />
+        <div class="blue_x" style="left: 50px; top: 100px;" />
     </div>
 </body>
 
