--- a/scotland_yard.html
+++ b/scotland_yard.html
@@ -7,14 +7,38 @@
     {{> about}} <br />
     <div id="gamemap">
         <img src="map.jpg" alt="map board" />
-        <div class="blue_x" style="left: 80px; top: 40px;" />
-        <div class="blue_x" style="left: 50px; top: 100px;" />
+        <img class="player" style="left: 80px; top: 40px;" src="blue_x.png" />
+        <img class="player" style="left: 50px; top: 100px;" src="black_x.png" />
+    </div>
+    <div id="right">
+        {{> lobby}}
     </div>
 </body>
+
+<template name="lobby">
+    <div>
+        {{#if show }}
+        <div id="lobby">
+            <strong>What's your name?</strong><br />
+            <input id="myname" type="text" /><br />
+            {{#if count}}
+            <strong>{{count}} other players are in the lobby:</strong><br />
+            {{#each waiting }}
+            <div class="player">{{name}}</div><br />
+            {{/each}}
+            {{/if}}
+            <div>
+                <button id="startgame" class="startgame" {{{disabled}}}>Start</button>
+            </div>
+        </div>
+        {{/if}}
+    </div>
+</template>
 
 <template name="about">
     <h3>About</h3>
     {{greeting}}
     We do not think you will need to reference them, but on the off chance, we have included the
-    <a href="http://globetrotter-games.com/index.htm?E&game/rules/eScotYd1.htm">rules</a>.
+    <a href="http://globetrotter-games.com/index.htm?E&game/rules/eScotYd1.htm">rules</a>.<br />
+    This game is best played on a 1280x1024px monitor.
 </template>
