move view code to client only

--- a/client/scotland_yard.html
+++ b/client/scotland_yard.html
@@ -7,8 +7,8 @@
     {{> about}} <br />
     <div id="gamemap">
         <img src="map.jpg" alt="map board" />
-        <img class="player" style="left: 80px; top: 40px;" src="blue_x.png" />
-        <img class="player" style="left: 50px; top: 100px;" src="black_x.png" />
+        <img class="player_icon" style="left: 80px; top: 40px;" src="blue_x.png" />
+        <img class="player_icon" style="left: 50px; top: 100px;" src="black_x.png" />
     </div>
     <div id="right">
         {{> lobby}}
@@ -40,5 +40,5 @@
     {{greeting}}
     We do not think you will need to reference them, but on the off chance, we have included the
     <a href="http://globetrotter-games.com/index.htm?E&game/rules/eScotYd1.htm">rules</a>.<br />
-    This game is best played on a 1280x1024px monitor.
+    This game is best played on a 1280x1024px or bigger monitor.
 </template>
