update player div ids to match jQuery selectors

--- a/client/scotland_yard.html
+++ b/client/scotland_yard.html
@@ -1,17 +1,16 @@
 <head>
     <title>Scotland Yard</title>
-    <meta name="author" content="Jason Zerbe" />
 </head>
 
 <body>
     <div id="gamemap">
         <img src="map.jpg" alt="map board" />
-        <img id="player_black" class="player_icon" style="display: none;" src="black_x.png" />
-        <img id="player_blue" class="player_icon" style="display: none;" src="blue_x.png" />
-        <img id="player_green" class="player_icon" style="display: none;" src="green_x.png" />
-        <img id="player_orange" class="player_icon" style="display: none;" src="orange_x.png" />
-        <img id="player_red" class="player_icon" style="display: none;" src="red_x.png" />
-        <img id="player_yellow" class="player_icon" style="display: none;" src="yellow_x.png" />
+        <img id="player_0" class="player_icon" style="display: none;" src="black_x.png" />
+        <img id="player_1" class="player_icon" style="display: none;" src="blue_x.png" />
+        <img id="player_2" class="player_icon" style="display: none;" src="green_x.png" />
+        <img id="player_3" class="player_icon" style="display: none;" src="orange_x.png" />
+        <img id="player_4" class="player_icon" style="display: none;" src="red_x.png" />
+        <img id="player_5" class="player_icon" style="display: none;" src="yellow_x.png" />
     </div>
     <div id="right">
         {{> lobby}}
